# opm-upscaling

./: .directory  .gitignore  .hgignore  .hgsub  .hgsubstate  .hgtags  .travis.yml  CMakeLists.txt  CMakeLists_files.cmake  EmbedCases.cmake  MAINTAINERS  Makefile.am  README  TestUpscalingBinaries.cmake  compareUpscaling.cmake  config.h.cmake  configure  configure.ac  dune-porsol.pc.in  dune-upscaling.pc.in  dune.module  opm-porsol.pc.in  opm-upscaling-prereqs.cmake  opm-upscaling.pc.in
dune/porsol/blackoil/test/: Makefile.am  bo_fluid_p_and_z_deps.cpp  bo_fluid_pressuredeps.cpp  bo_fluid_test.cpp  bo_transport_test.cpp  bo_well_test.cpp
dune/porsol/blackoil/test/inversion/: inversiontest.param  runinversiontest.sh
dune/porsol/blackoil/test/inversion/inversion_reference_output/: blackoil-output-0.vtu  blackoil-output-130.vtu  blackoil-output-160.vtu  blackoil-output-190.vtu  blackoil-output-200.vtu  blackoil-output-220.vtu  blackoil-output-230.vtu  blackoil-output-260.vtu  blackoil-output-270.vtu  blackoil-output-30.vtu  blackoil-output-360.vtu  blackoil-output-370.vtu  blackoil-output-380.vtu  blackoil-output-40.vtu  blackoil-output-430.vtu  blackoil-output-450.vtu  blackoil-output-540.vtu
dune/porsol/blackoil/test/simpleSPE9/spe9_reference_output/: blackoil-output-0.vtu  blackoil-output-1000.vtu  blackoil-output-1100.vtu  blackoil-output-1300.vtu  blackoil-output-1700.vtu  blackoil-output-1800.vtu  blackoil-output-1900.vtu  blackoil-output-200.vtu  blackoil-output-2000.vtu  blackoil-output-2100.vtu  blackoil-output-2300.vtu  blackoil-output-2400.vtu  blackoil-output-2500.vtu  blackoil-output-2700.vtu  blackoil-output-2900.vtu  blackoil-output-300.vtu  blackoil-output-3000.vtu  blackoil-output-3100.vtu  blackoil-output-3200.vtu  blackoil-output-3300.vtu  blackoil-output-3400.vtu  blackoil-output-3900.vtu  blackoil-output-400.vtu  blackoil-output-4200.vtu  blackoil-output-4300.vtu  blackoil-output-4500.vtu  blackoil-output-4800.vtu  blackoil-output-4900.vtu  blackoil-output-5200.vtu  blackoil-output-5300.vtu  blackoil-output-5400.vtu  blackoil-output-5500.vtu  blackoil-output-5600.vtu  (+8 more)
dune/porsol/common/: AbstractLinearSolver.hpp  BCRSMatrixBlockAssembler.hpp  BoundaryConditions.hpp  BoundaryPeriodicity.hpp  GridInterfaceEuler.hpp  ImplicitTransportDefs.hpp  LinearSolverISTL.cpp  LinearSolverISTL.hpp  Makefile.am  Matrix.hpp  NonuniformTableLinear.hpp  PeriodicHelpers.hpp  ReservoirPropertyCapillary.hpp  ReservoirPropertyCapillaryAnisotropicRelperm.hpp  ReservoirPropertyCapillary_impl.hpp  ReservoirPropertyCommon.hpp  ReservoirPropertyCommon_impl.hpp  ReservoirPropertyFixedMobility.hpp  Rock.hpp  RockAnisotropicRelperm.hpp  RockJfunc.hpp  Rock_impl.hpp  SimpleRock.hpp  SimulatorBase.hpp  SimulatorTester.hpp  SimulatorTesterFlexibleBC.hpp  SimulatorTraits.hpp  SimulatorUtilities.hpp  Wells.hpp  blas_lapack.hpp  fortran.hpp  setupBoundaryConditions.hpp  setupGridAndProps.hpp
dune/porsol/common/test/: Makefile.am  aniso_implicitcap_test.cpp  aniso_simulator_test.cpp  boundaryconditions_test.cpp  gie_test.cpp  implicitcap_test.cpp  matrix_test.cpp  nonuniformtablelinear_test.cpp  periodic_test.cpp  rockjfunc_test.cpp  simulator_test.cpp  uniformtablelinear_test.cpp
dune/porsol/twophase2/OPMIRISCode/: IRISDuneGridInterface.hpp  IRISDuneISTLInterface.hpp  IrisOpmTdefs.h  Makefile.am  PMTwoPhaseElliptic.h  PMTwoPhaseSaturation.h  PMTwoPhaseSimulationData.cpp  PMTwoPhaseSimulationData.h  PMTwoPhaseSimulator.h  SFCapPress.cpp  SFCapPress.h  SFCentralUpwind.cpp  SFCentralUpwind.h  SFMpfaFps.cpp  SFMpfaFps.h  SFPMPhysicalFieldProperties.cpp  SFPMPhysicalFieldProperties.h  SFRelPerm.cpp  SFRelPerm.h  VTKStructuredGridWriter.cpp  VTKStructuredGridWriter.h  dune_iris_opm.cc
dune/upscaling/test/: CornerpointChopper.hpp  Makefile.am  aniso_implicit_steadystate_test.cpp  aniso_steadystate_test.cpp  cpchop.cpp  implicit_steadystate_test.cpp  opmpressure_test.cpp  steadystate_test.cpp  steadystate_test_explicit.cpp  steadystate_test_implicit.cpp  upscaling_test.cpp
examples/: Makefile.am  SimulatorTester.hpp  SimulatorTesterFlexibleBC.hpp  aniso_implicitcap_test.cpp  aniso_simulator_test.cpp  blackoil_sim_test.cpp  co2_blackoil_pvt.cpp  co2_sim_test.cpp  cp_regularize.cpp  cpchop.cpp  cpchop_depthtrend.cpp  cpregularize.cpp  exp_variogram.cpp  grdecl_to_legacy_test.cpp  grdecldips.cpp  ifsh_solver_test.cpp  implicitcap_test.cpp  istl_test.cpp  known_answer_test.cpp  make_vtk_test.cpp  mimetic_aniso_solver_test.cpp  mimetic_periodic_test.cpp  mimetic_solver_test.cpp  sim_blackoil_impes.cpp  sim_co2_impes.cpp  sim_steadystate_explicit.cpp  sim_steadystate_implicit.cpp  simulator_implicit_test.cpp  simulator_test.cpp  spe10_test.cpp  spu_2p.cpp  steadystate_test_implicit.cpp  tpfa_compressible_solver_test.cpp  tpfa_solver_test.cpp  twophase2_test.cpp  upscale_avg.cpp  upscale_cap.cpp  upscale_cond.cpp  upscale_elasticity.cpp  upscale_perm.cpp  (+4 more)
lib/: Makefile.am
opm/porsol/common/: AbstractLinearSolver.hpp  BCRSMatrixBlockAssembler.hpp  BoundaryConditions.hpp  BoundaryPeriodicity.cpp  BoundaryPeriodicity.hpp  GridInterfaceEuler.hpp  ImplicitTransportDefs.cpp  ImplicitTransportDefs.hpp  LinearSolverISTL.cpp  LinearSolverISTL.hpp  Makefile.am  Matrix.hpp  MatrixInverse.hpp  NonuniformTableLinear.hpp  PeriodicHelpers.hpp  ReservoirPropertyCapillary.hpp  ReservoirPropertyCapillaryAnisotropicRelperm.hpp  ReservoirPropertyCapillaryAnisotropicRelperm_impl.hpp  ReservoirPropertyCapillary_impl.hpp  ReservoirPropertyCommon.hpp  ReservoirPropertyCommon_impl.hpp  ReservoirPropertyFixedMobility.hpp  ReservoirPropertyTracerFluid.hpp  Rock.hpp  RockAnisotropicRelperm.hpp  RockJfunc.hpp  Rock_impl.hpp  SimpleRock.hpp  SimulatorBase.hpp  SimulatorTraits.hpp  SimulatorUtilities.hpp  SintefLegacyGridInterface.hpp  Wells.hpp  blas_lapack.cpp  blas_lapack.hpp  fortran.hpp  setupBoundaryConditions.hpp  setupGridAndProps.cpp  setupGridAndProps.hpp
opm/porsol/common/test/: boundaryconditions_test.cpp  matrix_test.cpp  periodic_test.cpp
tests/not-unit/mimetic/: Makefile.am  mimetic_ipeval_test.cpp
(+583 files in other folders)
